# FastAPI-for-ML

./: main.py  pyproject.toml  requirements.txt
3.Building APIs/: async_main.py  main.py  models.py  models_var.py  pydantic-demo.py
4.Database Integration/crud-app/: crud.py  main.py  models.py  schemas.py  test.db
5.Machine Learning Integration/: keras_model.keras  keras_serialization.ipynb  model.pkl  pickle_joblib_serialization.ipynb
5.Machine Learning Integration/ml-model/: main.py  model.joblib  schemas.py  train.py
6.Advanced FastAPI Concepts/api-keys/: env-apikeys.py  headers.py
6.Advanced FastAPI Concepts/dependency-injection/: config_management.py  database-connection.py  user_auth.py
6.Advanced FastAPI Concepts/jwt-authentication/: auth.py  main.py  models.py  utils.py
6.Advanced FastAPI Concepts/middleware/: cors-middleware.py  custom-middleware.py
7.Testing & Debugging/debugging-techniques/: exc-handling.py  logging-demo.py
7.Testing & Debugging/e2e-testing/app/: main.py
7.Testing & Debugging/e2e-testing/tests/: test_main.py
7.Testing & Debugging/integration-testing/app/: logic.py  main.py
7.Testing & Debugging/mock-ml/: main.py  model.joblib  model.py  test_main.py  training.ipynb
8.Performance Optimization and Monitoring/: prometheus-setup.py  redis-setup.py
8.Performance Optimization and Monitoring/demo2/: docker-compose.yml
8.Performance Optimization and Monitoring/locust-demo/: locustfile.py  main.py
8.Performance Optimization and Monitoring/profiling/: cprofile-demo.py  time-demo.py
(+18 files in other folders)
