[project]
name = "fastapi-for-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "keras>=3.11.2",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic[email]>=2.11.7",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "sqlalchemy[asyncio]>=2.0.43",
    "tensorflow>=2.20.0",
    "uvicorn>=0.35.0",
]
