[project]
name = "fastapi-for-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.1",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "keras>=3.11.2",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "redis[async]>=6.4.0",
    "scikit-learn>=1.7.1",
    "snakeviz>=2.2.2",
    "sqlalchemy[asyncio]>=2.0.43",
    "tensorflow>=2.20.0",
    "uvicorn>=0.35.0",
]
